projetos/local/nexus-campaign-webapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-local
  labels:
    environment: local
