projetos/local/nexus-campaign-webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-campaign-webapp
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: nexus-campaign-webapp
        image: ghcr.io/synapsehealthtech/nexus-campaign-webapp:v1.0.0
        imagePullPolicy: IfNotPresent
        # resources: OMITIDO INTENCIONALMENTE — K3D local
